--- a/stack.yaml
+++ b/stack.yaml
@@ -1,1 +1,4 @@
 resolver: lts-15.5
+
+extra-deps:
+  - servant-multipart-0.11.5@sha256:1633f715b5b53d648a1da69839bdc5046599f4f7244944d4bbf852dba38d8f4b,2319
