--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,10 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [master]
+    branches:
+      - master
+      - "feature/*"
+      - "fixes/*"
 
 jobs:
   build:
