--- a/.travis.yml
+++ b/.travis.yml
@@ -8,36 +8,22 @@ cabal: "2.4"
 
 cache:
   directories:
-  - "$HOME/.cabal/store"
-  - "$HOME/.stack"
-  - "$TRAVIS_BUILD_DIR/.stack-work"
+    - "$HOME/.cabal/store"
+    - "$HOME/.stack"
+    - "$TRAVIS_BUILD_DIR/.stack-work"
 
 matrix:
   include:
-  - ghc: 8.2.2
-  - ghc: 8.4.4
-  - ghc: 8.6.5
-  - ghc: 8.8.3
-  
-  - ghc: 8.2.2
-    env: STACK_YAML="$TRAVIS_BUILD_DIR/stack-8.2.2.yaml"
-  
-  - ghc: 8.4.4
-    env: STACK_YAML="$TRAVIS_BUILD_DIR/stack-8.4.4.yaml"
-  
-  - ghc: 8.6.5
-    env: STACK_YAML="$TRAVIS_BUILD_DIR/stack-8.6.5.yaml"
-  
-  - ghc: 8.8.3
-    env: STACK_YAML="$TRAVIS_BUILD_DIR/stack.yaml"
-  
-  allow_failures:
-  
-  - ghc: 8.2.2
-    env: STACK_YAML="$TRAVIS_BUILD_DIR/stack-8.2.2.yaml"
-  
-  - ghc: 8.4.4
-    env: STACK_YAML="$TRAVIS_BUILD_DIR/stack-8.4.4.yaml"
+    - ghc: 8.6.5
+    - ghc: 8.8.3
+
+    - ghc: 8.6.5
+      env: STACK_YAML="$TRAVIS_BUILD_DIR/stack-8.6.5.yaml"
+
+    - ghc: 8.8.3
+      env: STACK_YAML="$TRAVIS_BUILD_DIR/stack.yaml"
+
+  allow_failures: []
 
 install:
   # HLint check
