--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-sudo: true
 language: haskell
+os: linux
+dist: xenial
 
 git:
   depth: 5
@@ -12,7 +13,7 @@ cache:
     - "$HOME/.stack"
     - "$TRAVIS_BUILD_DIR/.stack-work"
 
-matrix:
+jobs:
   include:
     - ghc: 8.6.5
     - ghc: 8.8.3
