--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
           path: ~/.cabal/store
           key: ${{ runner.os }}-${{ matrix.ghc }}-cabal
 
+      - name: List files
+        run: "ls -la"
+
       - name: Build
         run: |
           cabal v2-update
