--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ cache:
 jobs:
   include:
     - ghc: 8.6.5
-    - ghc: 8.8.3
+    # - ghc: 8.8.3
 
     - ghc: 8.6.5
       env: STACK_YAML="$TRAVIS_BUILD_DIR/stack-8.6.5.yaml"
