--- a/havenza.cabal
+++ b/havenza.cabal
@@ -24,12 +24,19 @@ source-repository head
 common common-options
   build-depends:       base >= 4.10.1.0 && < 4.14
                       , servant-server
+                      , polysemy
+                      , polysemy-plugin
+
   
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
+                       -O2
+                       -flate-specialise
+                       -fspecialise-aggressively
+                       -fplugin=Polysemy.Plugin
   if impl(ghc >= 8.0)
     ghc-options:       -Wredundant-constraints
   if impl(ghc >= 8.2)
