--- a/havenza.cabal
+++ b/havenza.cabal
@@ -48,6 +48,21 @@ common common-options
     ghc-options:       -Wmissing-deriving-strategies
 
   default-language:    Haskell2010
+  default-extensions:  DataKinds
+                       , DerivingStrategies
+                       , GADTs
+                       , GeneralizedNewtypeDeriving
+                       , FlexibleContexts
+                       , LambdaCase
+                       , MultiParamTypeClasses
+                       , OverloadedLists
+                       , OverloadedStrings
+                       , PolyKinds
+                       , RecordWildCards
+                       , ScopedTypeVariables
+                       , TypeApplications
+                       , TypeOperators
+                       , ViewPatterns     
 
 library
   import:              common-options
