--- a/havenza.cabal
+++ b/havenza.cabal
@@ -87,7 +87,10 @@ executable havenza
   hs-source-dirs:      app
   main-is:             Main.hs
   build-depends:        havenza
+                      , data-default-class
+                      , servant-multipart
                       , warp
+                      , wai-extra
   ghc-options:         -threaded
                        -rtsopts
                        -with-rtsopts=-N
